--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-    "name": "react-tutorial",
-    "homepage": "https://jmignault.github.io/react-tutorial",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-	"react": "^16.4.2",
-	"react-dom": "^16.4.2",
-	"react-scripts": "1.1.5"
-    },
-    "scripts": {
-	"start": "react-scripts start",
-	"build": "react-scripts build",
-	"test": "react-scripts test --env=jsdom",
-	"eject": "react-scripts eject",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
-    }
+			"name": "react-tutorial",
+			"homepage": "https://jmignault.github.io/react-tutorial",
+			"version": "0.1.0",
+			"private": true,
+			"dependencies": {
+						"react": "^16.4.2",
+						"react-dom": "^16.4.2",
+						"react-scripts": "1.1.5"
+			},
+			"scripts": {
+						"start": "react-scripts start",
+						"build": "react-scripts build",
+						"test": "react-scripts test --env=jsdom",
+						"eject": "react-scripts eject",
+						"predeploy": "npm run build",
+						"deploy": "gh-pages -d build"
+			},
+			"devDependencies": {
+						"babel-eslint": "^9.0.0",
+						"eslint-plugin-react": "^7.11.1",
+						"gh-pages": "^1.2.0",
+						"jest-cli": "^23.5.0"
+			}
 }
